[project]
name = "news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "beautifulsoup4>=4.13.4",
    "elevenlabs>=2.7.1",
    "fastapi>=0.116.1",
    "gtts>=2.5.4",
    "langchain-anthropic>=0.3.17",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.3",
    "lxml>=6.0.0",
    "mcp>=1.12.0",
    "ollama>=0.5.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.0",
]
